{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 728,
  "lineage": "4ba97911-7669-b79f-7275-aab8d7075cd2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:internet-gateway/igw-042745087b6b258f2",
            "id": "igw-042745087b6b258f2",
            "owner_id": "153042419275",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:security-group/sg-0a49882f4580723bd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a49882f4580723bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-microservices-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "153042419275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:security-group/sg-038b7b2e24562396d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038b7b2e24562396d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-microservices-task-sg-dev",
            "name_prefix": "",
            "owner_id": "153042419275",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:vpc/vpc-030a591b0a49b22c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f92dd4d22bce101",
            "default_route_table_id": "rtb-0f59f1c750ae9311f",
            "default_security_group_id": "sg-01ef4a9a6020f8ba4",
            "dhcp_options_id": "dopt-0f64c08ff560ee6a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-030a591b0a49b22c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f59f1c750ae9311f",
            "owner_id": "153042419275",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:listener/app/ecs-microservices-alb-dev/425710f22bdaa8c0/3534121d6c1aa2c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:153042419275:listener/app/ecs-microservices-alb-dev/425710f22bdaa8c0/3534121d6c1aa2c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:loadbalancer/app/ecs-microservices-alb-dev/425710f22bdaa8c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main",
            "module.load_balancer.aws_lb.main_lb",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.public_subnet_2.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:listener/app/ecs-microservices-alb-dev/425710f22bdaa8c0/51d136d064a7bf76",
            "certificate_arn": "arn:aws:acm:us-east-2:153042419275:certificate/e76d59d6-fd3a-4085-9d91-cd33d27640c6",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:targetgroup/ecs-microservices-tg-lb-dev/a3780ccd8cc787a1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:153042419275:listener/app/ecs-microservices-alb-dev/425710f22bdaa8c0/51d136d064a7bf76",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:loadbalancer/app/ecs-microservices-alb-dev/425710f22bdaa8c0",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main",
            "module.load_balancer.aws_alb_target_group.main_gr",
            "module.load_balancer.aws_lb.main_lb",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.public_subnet_2.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "main_gr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:targetgroup/ecs-microservices-tg-lb-dev/a3780ccd8cc787a1",
            "arn_suffix": "targetgroup/ecs-microservices-tg-lb-dev/a3780ccd8cc787a1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:153042419275:targetgroup/ecs-microservices-tg-lb-dev/a3780ccd8cc787a1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-microservices-tg-lb-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main",
            "module.load_balancer.aws_lb.main_lb",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.public_subnet_2.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:153042419275:loadbalancer/app/ecs-microservices-alb-dev/425710f22bdaa8c0",
            "arn_suffix": "app/ecs-microservices-alb-dev/425710f22bdaa8c0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-microservices-alb-dev-1031676393.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:153042419275:loadbalancer/app/ecs-microservices-alb-dev/425710f22bdaa8c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-microservices-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a49882f4580723bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f9da0fd48d2fb3e"
              },
              {
                "subnet_id": "subnet-0ef1c654cbfddf306"
              }
            ],
            "subnets": [
              "subnet-01f9da0fd48d2fb3e",
              "subnet-0ef1c654cbfddf306"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-030a591b0a49b22c2",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.main",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.public_subnet_2.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nat_av_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d24747621c332ef0",
            "domain": "vpc",
            "id": "eipalloc-0d24747621c332ef0",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-135-255-203.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.255.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_av_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d24747621c332ef0",
            "connectivity_type": "public",
            "id": "nat-0010adbf4512e72e9",
            "network_interface_id": "eni-0708a2d76e300a7a9",
            "private_ip": "10.0.10.234",
            "public_ip": "3.135.255.203",
            "subnet_id": "subnet-01f9da0fd48d2fb3e",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_1.aws_eip.nat",
            "module.public_subnet_1.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.nat_av_2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c1a399a455a4cb2",
            "domain": "vpc",
            "id": "eipalloc-09c1a399a455a4cb2",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-15-102-233.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.102.233",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_av_2",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09c1a399a455a4cb2",
            "connectivity_type": "public",
            "id": "nat-06ffb8ee441d1255d",
            "network_interface_id": "eni-0d017f670ee84455e",
            "private_ip": "10.0.11.118",
            "public_ip": "3.15.102.233",
            "subnet_id": "subnet-0ef1c654cbfddf306",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_2.aws_eip.nat",
            "module.public_subnet_2.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:subnet/subnet-056b824d904251411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056b824d904251411",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153042419275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:subnet/subnet-0aa9f3b14f30dd7ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa9f3b14f30dd7ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "153042419275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:subnet/subnet-01f9da0fd48d2fb3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f9da0fd48d2fb3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "153042419275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:subnet/subnet-0ef1c654cbfddf306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef1c654cbfddf306",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "153042419275",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a9982852889b15f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0010adbf4512e72e9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a9982852889b15f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_1.aws_eip.nat",
            "module.nat_av_1.aws_nat_gateway.main",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.route_table_private_1.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:route-table/rtb-01a9982852889b15f",
            "id": "rtb-01a9982852889b15f",
            "owner_id": "153042419275",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_1.aws_eip.nat",
            "module.nat_av_1.aws_nat_gateway.main",
            "module.public_subnet_1.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c84d1098fb55750",
            "route_table_id": "rtb-01a9982852889b15f",
            "subnet_id": "subnet-056b824d904251411"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_1.aws_eip.nat",
            "module.nat_av_1.aws_nat_gateway.main",
            "module.private_subnet_1.aws_subnet.ecs_subnet",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.route_table_private_1.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0af7310487642142e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06ffb8ee441d1255d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af7310487642142e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_2.aws_eip.nat",
            "module.nat_av_2.aws_nat_gateway.main",
            "module.public_subnet_2.aws_subnet.ecs_subnet",
            "module.route_table_private_2.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:route-table/rtb-0af7310487642142e",
            "id": "rtb-0af7310487642142e",
            "owner_id": "153042419275",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_2.aws_eip.nat",
            "module.nat_av_2.aws_nat_gateway.main",
            "module.public_subnet_2.aws_subnet.ecs_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_private_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0620f03ab25a94801",
            "route_table_id": "rtb-0af7310487642142e",
            "subnet_id": "subnet-0aa9f3b14f30dd7ce"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.nat_av_2.aws_eip.nat",
            "module.nat_av_2.aws_nat_gateway.main",
            "module.private_subnet_2.aws_subnet.ecs_subnet",
            "module.public_subnet_2.aws_subnet.ecs_subnet",
            "module.route_table_private_2.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-042745087b6b258f2",
            "id": "r-rtb-0d2054cec3114e8c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2054cec3114e8c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.route_table_public_1.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:route-table/rtb-0d2054cec3114e8c7",
            "id": "rtb-0d2054cec3114e8c7",
            "owner_id": "153042419275",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ec5f370b2b8a13c",
            "route_table_id": "rtb-0d2054cec3114e8c7",
            "subnet_id": "subnet-01f9da0fd48d2fb3e"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.public_subnet_1.aws_subnet.ecs_subnet",
            "module.route_table_public_1.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-042745087b6b258f2",
            "id": "r-rtb-01a38cd38b3e50be11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a38cd38b3e50be1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "module.route_table_public_2.aws_route_table.table"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:153042419275:route-table/rtb-01a38cd38b3e50be1",
            "id": "rtb-01a38cd38b3e50be1",
            "owner_id": "153042419275",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-030a591b0a49b22c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_public_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3abbf29cde4c497",
            "route_table_id": "rtb-01a38cd38b3e50be1",
            "subnet_id": "subnet-0ef1c654cbfddf306"
          },
          "dependencies": [
            "aws_vpc.main",
            "module.public_subnet_2.aws_subnet.ecs_subnet",
            "module.route_table_public_2.aws_route_table.table"
          ]
        }
      ]
    }
  ]
}